# PathFinder

./: .gitignore  README.md
D3/: Dockerfile.primitive  docker-compose.prod.yml
D3/backend/: CMakeLists.txt  Dockerfile  Dockerfile.prod  main.cpp
D3/backend/src/: main.cpp
D3/frontend/: Dockerfile.prod  script.js
DIJKSTRA_DOCKER/: Dockerfile  readme.md
DIJKSTRA_DOCKER/backend/: CMakeLists.txt  main.cpp
DIJKSTRA_DOCKER/frontend/: script.js
GridGuide/: docker-compose.yml
GridGuide/backend/: CMakeLists.txt
GridGuide/frontend/: Dockerfile  nginx.conf  nginx.prod.conf  script.js
Simulation/: .dockerignore  docker-compose.prod.yml  docker-compose.yml
Simulation/backend/: CMakeLists.txt  Dockerfile  Dockerfile.prod  hot_reload.sh
Simulation/backend/include/: api.hpp  graph.hpp  routes.hpp
Simulation/backend/src/: api.cpp  graph.cpp  main.cpp  routes.cpp  server.cpp
Simulation/frontend/: index.html  package-lock.json  package.json  vite.config.js
Simulation/frontend/public/: map_style.json
Simulation/frontend/src/: App.jsx  config.jsx
Simulation/frontend/src/components/: Controller.jsx  DriverLayer.jsx  Map.jsx  PathLayer.jsx  map.jsx
Simulation/frontend/src/hooks/: useSmoothStateChange.jsx
Simulation/frontend/src/services/: MapService.jsx  spawnDrivers.jsx
Simulation/frontend/src/utils/: api.jsx
StreetSage/: .gitignore  docker-compose.yml
StreetSage/backend/src/: api.cpp  graph.cpp
StreetSage/frontend/: Dockerfile  package.json  vite.config.js
StreetSage/frontend/public/: map_style.json
StreetSage/frontend/src/: App.jsx
StreetSage/frontend/src/components/: DriverLayer.jsx  PathLayer.jsx
StreetSage/frontend/src/utils/: api.jsx  helpers.jsx
frontend/: index.html  script.js
